Insertar compras, administradores

--- a/application/views/ingreso/insert.html
+++ b/application/views/ingreso/insert.html
@@ -26,12 +26,7 @@
 
     <div class="form-group">
         <label for="idproveedor">Proveedor</label>
-        <input required id="idproveedor" type="text" class="form-control" name="idproveedor" size="30"/>
-    </div>
-
-    <div class="form-group">
-        <label for="fecha_ingreso">Fecha de ingreso</label>
-        <input required id="fecha_ingreso" type="text" class="form-control" name="fecha_ingreso" size="30"/>
+        <input required id="idproveedor" type="number" class="form-control" name="idproveedor" size="30"/>
     </div>
     
     <div class="form-group">
@@ -41,17 +36,17 @@
     
     <div class="form-group">
         <label for="serie_comprobante">Serie de comprobante</label>
-        <input required id="serie_comprobante" type="text" class="form-control" name="serie_comprobante" size="30"/>
+        <input required id="serie_comprobante" type="number" class="form-control" name="serie_comprobante" size="30"/>
     </div>
     
     <div class="form-group">
         <label for="numero_comprobante">Numero de comprobante</label>
-        <input required id="numero_comprobante" type="text" class="form-control" name="numero_comprobante" size="30"/>
+        <input required id="numero_comprobante" type="number" class="form-control" name="numero_comprobante" size="30"/>
     </div>
     
     <div class="form-group">
         <label for="total">Total</label>
-        <input required id="total" type="text" class="form-control" name="total" size="30"/>
+        <input required id="total" type="number" class="form-control" name="total" size="30"/>
     </div>
 
     <div class="form-group">
