--- a/application/views/venta/insert.html
+++ b/application/views/venta/insert.html
@@ -26,22 +26,17 @@
 
     <div class="form-group">
         <label for="idusuario">Usuario</label>
-        <input readonly id="idusuario" type="text" class="form-control" name="idusuario" size="30" value="$venta.idusuario"/>
+        <input required id="idusuario" type="text" class="form-control" name="idusuario" size="30" />
     </div>
     
     <div class="form-group">
         <label for="total">Total</label>
-        <input readonly id="total" type="text" class="form-control" name="total" size="30" value="$venta.total"/>
+        <input required id="total" type="number" class="form-control" name="total" size="30" />
     </div>
     
     <div class="form-group">
         <label for="idformapago">Forma de pago</label>
-        <input readonly id="idformapago" type="text" class="form-control" name="idformapago" size="30" value="$venta.idformapago"/>
-    </div>
-    
-    <div class="form-group">
-        <label for="fecha_venta">Fecha de venta</label>
-        <input readonly id="fecha_venta" type="text" class="form-control" name="fecha_venta" size="30" value="$venta.fecha_venta"/>
+        <input required id="idformapago" type="number" class="form-control" name="idformapago" size="30"/>
     </div>
 
     <div class="form-group">
